--- a/hw/homework/hw_01/index.html
+++ b/hw/homework/hw_01/index.html
@@ -11,16 +11,20 @@
 		<h1>Grandma's Pies</h1>
 		<p id="p1">Welcome to Grandma's Pies! ^_^<br>
 				The home of the most delicious pie!<br>
+				<br>
 				Established in 1976, Dave and Ron continue the Grandma's tradition of excellent meals for any occasion,
-				friendly service and the best pies - Just like Grandma used to make!</p>
+				friendly service and the best pies - Just like Grandma used to make!<br>
+				Granny's recipes prepared on the premises with old-fashioned skill provide a difference that you can taste. Homemade dinners, soups, quiches and hand-made hamburger patties of select ground beef on home baked rolls are but a few of the menu items of this unique restaurant.<br>
+                From our "World Famous" Cream of Turkey Soup to our 46 varieties of home baked pies to celebrating every holiday with festive decorations and coordinating uniforms, you’ll feel right at home when you sit down to any meal with our family.
+        </p>
 		<hr>
 		<p id="p2">Are you looking for delicious pie recipes? Look no further.<br>
-				The pie of month is <strong>a click away</strong>!<br>
+				The pie of month is <strong>a CLICK away!</strong><br>
 		</p>
-		<p id="p3">↓↓↓↓↓↓ <strong>click here</strong> ↓↓↓↓↓↓</p>
-		<a href="pie.html" title="Grandma's Lemon Meringue Pie"><img src="images/pie.jpg" alt="pie"></a>
+		<p id="p3">↓↓↓↓↓↓ <strong>CLICK HERE</strong> ↓↓↓↓↓↓</p>
+		<a href="pie.html" title="Grandma's Lemon Meringue Pie"><img src="images/pie.jpg" alt="Grandma's Lemon Meringue Pie"></a>
 		<hr>
-		<p id="p4">These also are delicious pie!</p>
+		<p id="p4">These also are delicious pie! Try and CHECK OUT!!</p>
 		<ul>
 			<li>Grandma's Country Apple Pie</li>
 			<li>Grandma's Banana Split Cream Pie</li>
@@ -28,9 +32,7 @@
 			<li>Grandma's Swiss Chocolate Almond</li>
 			<li>Grandma's Pineapple Whipped Cream</li>
 			<li>...</li>
-			<li><a href="http://www.grandmaspieshop.com/uploads/Pies_to_Go_8-10.pdf" title="menu">Click for More Pies</a></li>
 		</ul>
 		<hr>
-		<p id="p5">Click <a href="http://www.grandmaspieshop.com/">ME</a> to konw more about Grandma's Pies!</p>
 	</body>
 </html>
