--- a/hw/homework/hw_01/pie.html
+++ b/hw/homework/hw_01/pie.html
@@ -82,7 +82,7 @@
 		<br>
 		<a href="index.html">Home</a>
 		<br><br>
-		<a href="http://validator.w3.org/check/referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="html"></a>
-		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="css"></a>
+		<a href="http://validator.w3.org/check/referer"><img src="images/html.png" alt="html"></a>
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css.gif" alt="css"></a>
 	</body>
 </html>
