--- a/hw/lab/lab_02/journal.html
+++ b/hw/lab/lab_02/journal.html
@@ -17,8 +17,17 @@
 	<h1>Victoria's Journal</h1>
 	<h2 class="yellow">So fresh and so clean</h2>
 	</div>
+    
+    <div class="left">
+	<h1>Friends</h1>
+	<ul>
+	<li><a href="http://my.ss.sysu.edu.cn">My Software School</a></li>
+	<li><a href="http://www.youku.com" title="Youku">Favourite video</a></li>
+	</ul>
+	</div>
 
-	<div class="blue">
+	<div class="right">
+	<div class="blue" id="blue1">
 	<h2><span class="purple">04/09/08:</span> Spatulas</h2>
 	<p>
 		<img src="images/spatula.gif" alt="Much-needed spatula" title="Much-needed spatula" />
@@ -28,7 +37,7 @@
 	</p>
 	</div>
 
-	<div class="blue">
+	<div class="blue" id="blue2">
 	<h2><span class="purple">04/08/08:</span> Cookie Monster Cupcakes</h2>
 	<p>
 		<img src="images/cookiemonster.jpg" alt="Cookie Monster: in cupcake form!" title="Cookie Monster: in cupcake form!" />
@@ -40,8 +49,8 @@
 		 Did you know? Cookie Monster once said, <q>Sometimes me think what is love, and then me think love is what last cookie is for. Me give up the last cookie for you.</q> I wonder if the same applies for cupcakes? (If so, I don't think I can ever love ANYONE!)
 	</p>
 	</div>
-
 	</div>
+
 	<p>
 		<a style="text-decoration: none" href="http://validator.w3.org/check/referer">
 			<img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid HTML" />
