--- a/hw/homework/hw_02/tmnt.html
+++ b/hw/homework/hw_02/tmnt.html
@@ -9,17 +9,21 @@
 
 	<body>
 		<div class="first">
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/banner.png" alt="Rancid Tomatoes" />
+			<img src="images/banner.png" alt="Rancid Tomatoes" />
 		</div>
 
 		<h1>TMNT (2007)</h1>
 
 		<div class="body">
-		<div class="right">
-		<div >
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/generaloverview.png" alt="general overview" />
-		</div>
 
+		<div class="two">
+
+		<div class="right">
+		<div>
+			<img src="images/generaloverview.png" alt="general overview" />
+		</div> <!--img-->
+
+		<div class="intro">
 		<dl>
 			<dt>STARRING</dt>
 			<dd>Mako <br /> Sarah Michelle Gellar</dd>
@@ -48,95 +52,116 @@
 			<dt>OFFICIAL MOVIE SITE</dt>
 			<dd><a href="http://www.tmnt.com/">The Official TMNT Site</a></dd>
 		</dl>
-		</div>
-
-		<div class="rotten">
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rottenbig.png" alt="Rotten" />
-			<span>32%</span> (88 reviews total)
-		</div>
+		</div> <!--intro-->
+		</div> <!--right-->
 
 		<div class="left">
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif" alt="Rotten" />
+		<div class="rotten">
+			<img src="images/rottenbig.png" alt="Rotten" />
+			<span>32%</span> (88 reviews total) 
+		</div>
+
+		<div class="leftc">
+		<div class="leftcomment">
+		<p id="bold">
+			<img src="images/rotten.gif" alt="Rotten" />
 			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
 		</p>
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
+		<p id="italic">
+			<img src="images/critic.gif" alt="Critic" />
 			Peter Debruge <br />
-			Variety
+			<span>Variety</span>
 		</p>
+		</div>
 
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/fresh.gif" alt="Fresh" />
+		<div class="leftcomment">
+		<p id="bold">
+			<img src="images/fresh.gif" alt="Fresh" />
 			<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
 		</p>
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
+		<p id="italic">
+			<img src="images/critic.gif" alt="Critic" />
 			Todd Gilchrist <br />
-			IGN Movies
+			<span>IGN Movies</span>
 		</p>
+		</div>
 
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif" alt="Rotten" />
+		<div class="leftcomment">
+		<p id="bold">
+			<img src="images/rotten.gif" alt="Rotten" />
 			<q>It stinks!</q>
 		</p>
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
+		<p id="italic">
+			<img src="images/critic.gif" alt="Critic" />
 			Jay Sherman (unemployed)
 		</p>
+		</div>
 
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif" alt="Rotten" />
+		<div class="leftcomment">
+		<p id="bold">
+			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
 		</p>
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
+		<p id="italic">
+			<img src="images/critic.gif" alt="Critic" />
 			Joshua Tyler <br />
-			CinemaBlend.com
+			<span>CinemaBlend.com</span>
 		</p>
+		</div>
+		</div> <!--leftc-->
 
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif" alt="Rotten" />
+		<div class="rightc">
+		<div class="rightcomment">
+		<p id="bold">
+			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
 		</p>
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
+		<p id="italic">
+			<img src="images/critic.gif" alt="Critic" />
 			Jeannette Catsoulis <br />
-			New York Times
+			<span>New York Times</span>
 		</p>
+		</div>
 
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif" alt="Rotten" />
+		<div class="rightcomment">
+		<p id="bold">
+			<img src="images/rotten.gif" alt="Rotten" />
 			<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
 		</p>
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
+		<p id="italic">
+			<img src="images/critic.gif" alt="Critic" />
 			Ed Gonzalez <br />
-			Slant Magazine
+			<span>Slant Magazine</span>
 		</p>
+		</div>
 
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/fresh.gif" alt="Fresh" />
+		<div class="rightcomment">
+		<p id="bold">
+			<img src="images/fresh.gif" alt="Fresh" />
 			<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
 		</p>
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
+		<p id="italic">
+			<img src="images/critic.gif" alt="Critic" />
 			Mark Palermo <br />
-			Coast (Halifax, Nova Scotia)
+			<span>Coast (Halifax, Nova Scotia)</span>
 		</p>
+		</div>
 
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/rotten.gif" alt="Rotten" />
+		<div class="rightcomment">
+		<p id="bold">
+			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
 		</p>
-		<p>
-			<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
+		<p id="italic">
+			<img src="images/critic.gif" alt="Critic" />
 			Steve Rhodes <br />
-			Internet Reviews
+			<span>Internet Reviews</span>
 		</p>
 		</div>
-
+		</div> <!--rightc-->
+		</div> <!--left-->
+		</div> <!--two-->
 		<p id="bottom">(1-8) of 88</p>
-		</div>
+		</div> <!--body-->
 	</body>
 </html>
