--- a/hw/homework/hw_02/tmnt.html
+++ b/hw/homework/hw_02/tmnt.html
@@ -5,25 +5,21 @@
 		<title>TMNT - Rancid Tomatoes</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<link href="movie.css" type="text/css" rel="stylesheet" />
+		<link rel="icon" type="image/x-icon" href="images/rotten.gif">
 	</head>
 
 	<body>
-		<div class="first">
+		<div id="headimg">
 			<img src="images/banner.png" alt="Rancid Tomatoes" />
-		</div>
+		</div> <!--heading-->
 
 		<h1>TMNT (2007)</h1>
+		
 
-		<div class="body">
+		<div id="container">
+		<div id="right">
 
-		<div class="two">
-
-		<div class="right">
-		<div>
-			<img src="images/generaloverview.png" alt="general overview" />
-		</div> <!--img-->
-
-		<div class="intro">
+		<img src="images/generaloverview.png" alt="general overview" />
 		<dl>
 			<dt>STARRING</dt>
 			<dd>Mako <br /> Sarah Michelle Gellar</dd>
@@ -52,57 +48,58 @@
 			<dt>OFFICIAL MOVIE SITE</dt>
 			<dd><a href="http://www.tmnt.com/">The Official TMNT Site</a></dd>
 		</dl>
-		</div> <!--intro-->
 		</div> <!--right-->
 
-		<div class="left">
-		<div class="rotten">
+
+		<div id="content">
+		<div id="leftimg">
 			<img src="images/rottenbig.png" alt="Rotten" />
-			<span>32%</span> (88 reviews total) 
+			<span id="all"><span id="part">32%</span> (88 reviews total)</span>
 		</div>
 
-		<div class="leftc">
-		<div class="leftcomment">
-		<p id="bold">
+
+		<div id="leftc">
+		<div class="comment">
+		<p class="words">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
 		</p>
-		<p id="italic">
+		<p>
 			<img src="images/critic.gif" alt="Critic" />
 			Peter Debruge <br />
 			<span>Variety</span>
 		</p>
 		</div>
 
-		<div class="leftcomment">
-		<p id="bold">
+		<div class="comment">
+		<p class="words">
 			<img src="images/fresh.gif" alt="Fresh" />
 			<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
 		</p>
-		<p id="italic">
+		<p>
 			<img src="images/critic.gif" alt="Critic" />
 			Todd Gilchrist <br />
 			<span>IGN Movies</span>
 		</p>
 		</div>
 
-		<div class="leftcomment">
-		<p id="bold">
+		<div class="comment">
+		<p class="words">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>It stinks!</q>
 		</p>
-		<p id="italic">
+		<p>
 			<img src="images/critic.gif" alt="Critic" />
 			Jay Sherman (unemployed)
 		</p>
 		</div>
 
-		<div class="leftcomment">
-		<p id="bold">
+		<div class="comment">
+		<p class="words">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
 		</p>
-		<p id="italic">
+		<p>
 			<img src="images/critic.gif" alt="Critic" />
 			Joshua Tyler <br />
 			<span>CinemaBlend.com</span>
@@ -110,58 +107,67 @@
 		</div>
 		</div> <!--leftc-->
 
-		<div class="rightc">
-		<div class="rightcomment">
-		<p id="bold">
+		<div id="rightc">
+		<div class="comment">
+		<p class="words">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
 		</p>
-		<p id="italic">
+		<p>
 			<img src="images/critic.gif" alt="Critic" />
 			Jeannette Catsoulis <br />
 			<span>New York Times</span>
 		</p>
 		</div>
 
-		<div class="rightcomment">
-		<p id="bold">
+		<div class="comment">
+		<p class="words">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
 		</p>
-		<p id="italic">
+		<p>
 			<img src="images/critic.gif" alt="Critic" />
 			Ed Gonzalez <br />
 			<span>Slant Magazine</span>
 		</p>
 		</div>
 
-		<div class="rightcomment">
-		<p id="bold">
+		<div class="comment">
+		<p class="words">
 			<img src="images/fresh.gif" alt="Fresh" />
 			<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
 		</p>
-		<p id="italic">
+		<p>
 			<img src="images/critic.gif" alt="Critic" />
 			Mark Palermo <br />
 			<span>Coast (Halifax, Nova Scotia)</span>
 		</p>
 		</div>
 
-		<div class="rightcomment">
-		<p id="bold">
+		<div class="comment">
+		<p class="words">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
 		</p>
-		<p id="italic">
+		<p>
 			<img src="images/critic.gif" alt="Critic" />
 			Steve Rhodes <br />
 			<span>Internet Reviews</span>
 		</p>
 		</div>
 		</div> <!--rightc-->
-		</div> <!--left-->
-		</div> <!--two-->
+
+		</div> <!--content-->
+
+		<div id="clear"></div>
 		<p id="bottom">(1-8) of 88</p>
-		</div> <!--body-->
+		</div> <!--container-->
+
+		<div id="html">
+		<a href="http://validator.w3.org/check/referer"><img src="images/html.png" alt="html"></a>
+		</div>
+		<div id="css">
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css.gif" alt="css"></a>
+		</div>
 	</body>
 </html>
