--- a/hw/homework/hw_02/tmnt.html
+++ b/hw/homework/hw_02/tmnt.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>TMNT - Rancid Tomatoes</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link href="movie.css" type="text/css" rel="stylesheet" />
 		<link rel="icon" type="image/x-icon" href="images/rotten.gif">
 	</head>
