--- a/bootstrap_1/test.html
+++ b/bootstrap_1/test.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-   <meta charset="utf-8">
-   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-   <script src="http://apps.bdimg.com/libs/jquery/2.0.0/jquery.min.js"></script>
-   <script src="js/bootstrap.min.js"></script>
-</head>
-<body>
-   <div class="container">
-      <h1>我是标题1 h1. <small>我是副标题1 h1</small></h1> 
-      <h2>我是标题2 h2. <small>我是副标题2 h2</small></h2>
-      <h3>我是标题3 h3. <small>我是副标题3 h3</small></h3>
-      <h4>我是标题4 h4. <small>我是副标题4 h4</small></h4>
-      <h5>我是标题5 h5. <small>我是副标题5 h5</small></h5>
-      <h6>我是标题6 h6. <small>我是副标题6 h6</small></h6>
-   </div>
-</body>
-</html>
+    <head>
+        <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+        <link rel="stylesheet" href="http://files.cnblogs.com/rubylouvre/bootstrap.css"/> 
+        
+         <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="http://files.cnblogs.com/rubylouvre/bootstrap-transition.js"></script>
+        <script src="http://files.cnblogs.com/rubylouvre/bootstrap-modal.js"></script>
+ 
+       
+    </head>
+    <body>
+        <a href="#myModal" role="button" class="btn" data-toggle="modal">Launch demo modal</a>
+        <!-- Modal -->
+        <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">Modal header</h3>
+            </div>
+            <div class="modal-body">
+                <p>弹出层…</p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+                <button class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </body>
+</html> 
