--- a/sb-admin2/pages/index.html
+++ b/sb-admin2/pages/index.html
@@ -122,19 +122,7 @@
                                                     <th>订单状态</th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>2015/02/27</td>
-                                                    <td>李一奇</td>
-                                                    <td>10000元</td>
-                                                    <td>未完成</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>2015/02/27</td>
-                                                    <td>邓霭霖</td>
-                                                    <td>20000元</td>
-                                                    <td>完成</td>
-                                                </tr>
+                                            <tbody class="toDelete" id="orders_table_body">
                                             </tbody>
                                         </table>
                                     </td>
@@ -164,55 +152,11 @@
                                                     <th>提交</th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>邓霭霖</td>
-                                                    <td>0</td>
-                                                    <td><input type="text" class="form-control" name="amount" placeholder="请输入数量"></td>
-                                                    <td>
-                                                        <button type="submit" class="btn">补货</button>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>李一奇</td>
-                                                    <td>999</td>
-                                                    <td><input type="text" class="form-control" name="amount" placeholder="请输入数量"></td>
-                                                    <td>
-                                                        <button type="submit" class="btn">补货</button>
-                                                    </td>
-                                                </tr>
+                                            <tbody class="toDelete" id="replenishment_table_body">
                                             </tbody>
                                         </table>
                                     </td>
                                 </tr>
-                            </tbody>
-                        </table>
-                    </div>  
-                </div>
-
-                <div class="tab-pane fade" id="replenishment">
-                    <!-- 货物库存 -->
-                    <div class="table-responsive">
-                        <table class="table">
-                            <caption>货物总览</caption>
-                            <thead>
-                                <tr>
-                                    <th>商品信息</th>
-                                    <th>现有数量</th>
-                                    <th>补货个数</th>
-                                    <th>补货</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>戴旋</td>
-                                    <td>100</td>
-                                    <td><input type="text" class="form-control" name="amount" placeholder="请输入数量"></td>
-                                    <td>
-                                        <button type="submit" class="btn">补货</button>
-                                    </td>
-                                </tr>
-                                <tr>
                             </tbody>
                         </table>
                     </div>  
@@ -229,12 +173,7 @@
                                     <th>销售总金额</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>200单</td>
-                                    <th>10000元</th>
-                                </tr>
-                                <tr>
+                            <tbody class="toDelete" id="all_table_body">
                             </tbody>
                         </table>
                     </div>      
@@ -252,17 +191,7 @@
                                     <th>销售总额</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>至善园4号</td>
-                                    <td>100单</td>
-                                    <td>4000元</td>
-                                </tr>
-                                <tr>
-                                    <td>至善园3号</td>
-                                    <td>100单</td>
-                                    <td>6000元</td>
-                                </tr>
+                            <tbody class="toDelete" id="one_table_body">
                             </tbody>
                         </table>
                     </div>      
@@ -358,12 +287,8 @@
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
 
-    <script type="text/javascript">
-        $("#myTab a").click(function (e) {
-            e.preventDefault();
-            $(this).tab("show");
-        });
-    </script>
+    <script src="utils.js"></script>
+    <script src="index_2.js"></script>
     <script>
         $(function () { $('#myModal').modal({
             keyboard: true
