--- a/sb-admin2/index_2.html
+++ b/sb-admin2/index_2.html
@@ -74,18 +74,8 @@
                 <li id="li_replenishment">
                     <a href="#replenishment" data-toggle="tab">补货</a>
                 </li>
-                <li class="dropdown">
-                    <a href="#" id="total" class="dropdown-toggle" 
-                         data-toggle="dropdown">销售总额 <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="total">
-                        <li id="li_all">
-                            <a href="#all" tabindex="-1" data-toggle="tab">所有楼栋</a>
-                         </li>
-                         <li id="li_one">
-                            <a href="#one" tabindex="-1" data-toggle="tab">各个楼栋</a>
-                         </li>
-                    </ul>
+                <li class="dropdown" id="li_total">
+                    <a href="#total" data-toggle="tab">当月销售总额</a>
                 </li>
             </ul>
             <!-- Tab Navigation -->
@@ -155,40 +145,45 @@
                     </div>  
                 </div>
 
-                <div class="tab-pane fade" id="all">
-                    <!-- 所有楼栋销售总额 -->
+                <div class="tab-pane fade" id="total">
+                    <!-- 销售总额 -->
                     <div class="table-responsive">
                         <table class="table">
-                            <caption>所有楼栋销售总额</caption>
+                            <caption>当月所有楼栋销售总额</caption>
                             <thead>
                                 <tr>
                                     <th>订单总数量</th>
                                     <th>销售总金额</th>
                                 </tr>
                             </thead>
-                            <tbody id="all_table_body">
+                            <tbody id="total_table_body">
                             </tbody>
                         </table>
-                    </div>      
+                        <table class="table table-bordered">
+                            <caption>当月各楼栋销售总额</caption>
+                            <tbody>
+                                <tr>
+                                    <td style="vertical-align: middle; text-align: center">
+                                        <button class="btn" id="build3" data-toggle="modal" data-target="#myModal3">楼层</button>
+                                    </td>
+                                    <td style="padding: 0px">
+                                        <table class="table" style="margin-bottom: 0px">
+                                            <thead>
+                                                <tr>
+                                                    <th>订单总数量</th>
+                                                    <th>销售总金额</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="every_table_body">
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 
-                <div class="tab-pane fade" id="one">
-                    <!-- 各楼栋销售总额 -->
-                    <div class="table-responsive">
-                        <table class="table">
-                            <caption>各楼栋销售总额</caption>
-                            <thead>
-                                <tr>
-                                    <th>楼栋</th>
-                                    <th>订单数量</th>
-                                    <th>销售总额</th>
-                                </tr>
-                            </thead>
-                            <tbody id="one_table_body">
-                            </tbody>
-                        </table>
-                    </div>      
-                </div>
 
             </div>
             <!-- Tab Content -->
@@ -238,6 +233,30 @@
              <div class="modal-body">
                 <button type="button" class="btn btn-link chooseBuild tab2" data-dismiss="modal">至善园3号</button>
                 <button type="button" class="btn btn-link chooseBuild tab2" data-dismiss="modal">至善园4号</button>
+             </div>
+          </div>
+          <!-- /.modal-content -->
+       </div>
+       <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" 
+       aria-labelledby="myModalLabel" aria-hidden="true">
+       <div class="modal-dialog">
+          <div class="modal-content">
+             <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" 
+                   aria-hidden="true">×
+                </button>
+                <h4 class="modal-title" id="myModalLabel">
+                   请选择要查看的楼层
+                </h4>
+             </div>
+             <div class="modal-body">
+                <button type="button" class="btn btn-link chooseBuild tab3" data-dismiss="modal">至善园3号</button>
+                <button type="button" class="btn btn-link chooseBuild tab3" data-dismiss="modal">至善园4号</button>
              </div>
           </div>
           <!-- /.modal-content -->
