level2:ajax和逻辑基本完成...

--- a/sb-admin2/index_2.html
+++ b/sb-admin2/index_2.html
@@ -96,11 +96,11 @@
                     <!-- 当月所有订单 -->
                     <div class="table-responsive">
                         <table class="table table-bordered">
-                            <caption>订单总览</caption>
+                            <caption>订单总览（请按楼栋按钮选择要查看的楼栋）</caption>
                             <tbody>
                                 <tr>
                                     <td style="vertical-align: middle; text-align: center">
-                                        <button class="btn" id="build1" data-toggle="modal" data-target="#myModal1">楼层</button>
+                                        <button class="btn" id="build1" data-toggle="modal" data-target="#myModal1">楼栋</button>
                                     </td>
                                     <td style="padding: 0px">
                                         <table class="table" style="margin-bottom: 0px">
@@ -126,11 +126,11 @@
                     <!-- 货物库存 -->
                     <div class="table-responsive">
                         <table class="table table-bordered">
-                            <caption>货物总览</caption>
+                            <caption>货物总览（请按楼栋按钮选择要查看的楼栋）</caption>
                             <tbody>
                                 <tr>
                                     <td style="vertical-align: middle; text-align: center">
-                                        <button class="btn" id="build2" data-toggle="modal" data-target="#myModal2">楼层</button>
+                                        <button class="btn" id="build2" data-toggle="modal" data-target="#myModal2">楼栋</button>
                                     </td>
                                     <td style="padding: 0px">
                                         <table class="table" style="margin-bottom: 0px">
@@ -176,11 +176,11 @@
                     <!-- 各楼栋销售总额 -->
                     <div class="table-responsive">
                         <table class="table table-bordered">
-                            <caption>当月各楼栋销售总额</caption>
+                            <caption>当月各楼栋销售总额（请按楼栋按钮选择要查看的楼栋）</caption>
                             <tbody>
                                 <tr>
                                     <td style="vertical-align: middle; text-align: center">
-                                        <button class="btn" id="build3" data-toggle="modal" data-target="#myModal3">楼层</button>
+                                        <button class="btn" id="build3" data-toggle="modal" data-target="#myModal3">楼栋</button>
                                     </td>
                                     <td style="padding: 0px">
                                         <table class="table" style="margin-bottom: 0px">
@@ -200,12 +200,10 @@
                     </div>      
                 </div>
 
-
             </div>
             <!-- Tab Content -->
         </div>
         <!-- Content -->
-
     </div>
     <!-- /#wrapper -->
 
@@ -222,10 +220,7 @@
                    请选择要查看的楼层
                 </h4>
              </div>
-             <div class="modal-body">
-                <button type="button" class="btn btn-link chooseBuild tab1" data-dismiss="modal">至善园3号</button>
-                <button type="button" class="btn btn-link chooseBuild tab1" data-dismiss="modal">至善园4号</button>
-             </div>
+             <div class="modal-body"></div>
           </div>
           <!-- /.modal-content -->
        </div>
@@ -246,10 +241,7 @@
                    请选择要补货的楼层
                 </h4>
              </div>
-             <div class="modal-body">
-                <button type="button" class="btn btn-link chooseBuild tab2" data-dismiss="modal">至善园3号</button>
-                <button type="button" class="btn btn-link chooseBuild tab2" data-dismiss="modal">至善园4号</button>
-             </div>
+             <div class="modal-body"></div>
           </div>
           <!-- /.modal-content -->
        </div>
@@ -270,10 +262,7 @@
                    请选择要查看的楼层
                 </h4>
              </div>
-             <div class="modal-body">
-                <button type="button" class="btn btn-link chooseBuild tab3" data-dismiss="modal">至善园3号</button>
-                <button type="button" class="btn btn-link chooseBuild tab3" data-dismiss="modal">至善园4号</button>
-             </div>
+             <div class="modal-body"></div>
           </div>
           <!-- /.modal-content -->
        </div>
